--- a/client/index.html
+++ b/client/index.html
@@ -6,11 +6,11 @@
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <title>LibreChat</title>
-    <link rel="shortcut icon" href="#" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16.png" />
-    <link rel="apple-touch-icon" href="/assets/apple-touch-icon-180x180.png" />
+    <title>TAccSo</title>
+    <link rel="shortcut icon" href="/assets/high_quality_large_icon_128x128.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/high_quality_small_icon_32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/high_quality_favicon_16x16.png" />
+    <link rel="apple-touch-icon" href="/assets/high_quality_large_icon_128x128.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style>
       html,
