--- a/index.html
+++ b/index.html
@@ -7,26 +7,26 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <title>LibreChat</title>
+    <title>TAccSo</title>
     <link
       rel="shortcut icon"
-      href="#"
+      href="/assets/high_quality_large_icon_128x128.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="/assets/favicon-32x32.png"
+      href="/assets/high_quality_small_icon_32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="/assets/favicon-16x16.png"
+      href="/assets/high_quality_favicon_16x16.png"
     />
     <link
       rel="apple-touch-icon"
-      href="/assets/apple-touch-icon-180x180.png"
+      href="/assets/high_quality_large_icon_128x128.png"
     />
     <meta
       name="viewport"
