Update index html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- v0.7.5 -->
+<!-- v0.1.1 -->
 <!DOCTYPE html>
 <html>
   <head>
@@ -10,23 +10,23 @@
     <title>TAccSo</title>
     <link
       rel="shortcut icon"
-      href="/assets/high_quality_large_icon_128x128.png"
+      href="#"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="/assets/high_quality_small_icon_32x32.png"
+      href="/assets/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="/assets/high_quality_favicon_16x16.png"
+      href="/assets/favicon-16x16.png"
     />
     <link
       rel="apple-touch-icon"
-      href="/assets/high_quality_large_icon_128x128.png"
+      href="/assets/apple-touch-icon-180x180.png"
     />
     <meta
       name="viewport"
